--- a/css/styles.css
+++ b/css/styles.css
@@ -1,130 +1,128 @@
+/* Base */
+
 body {
-    font-family: "Roboto", sans-serif;
-    color: #434455;
-    background-color:#FFFFFF;
-    font-style: normal;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
+  font-family: 'Roboto', sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
 }
 
- a {
-   text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-h1, h2, h3 {
-    color: #2E2F42;
-    margin: 0;
-} 
+h1,
+h2,
 h3 {
-    margin-bottom: 8px;
+  color: #2e2f42;
+  margin: 0;
+}
+h3 {
+  margin-bottom: 8px;
 }
 p {
-    margin: 0;
+  margin: 0;
 }
- ul {
-	list-style-type: none;
-    margin: 0;
-    padding-left: 0;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
 }
 img {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
-.container { 
-    max-width: 1158px;
-    padding: 0 15px; 
-    margin: 0 auto;  
-    }
-    .visually-hidden {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        border: 0;
-        padding: 0;
-        
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
-      }
-        
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* Heder */
 .header-content {
-    border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
-    display: flex;
-    flex-direction: row;
-    padding: 0 15px;
-    gap: 60px;
-    
+  display: flex;
+  flex-direction: row;
+  padding: 0 15px;
+  gap: 60px;
 }
 .header-nav {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
 }
 .header-menu {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-    gap: 40px;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  gap: 40px;
+  justify-content: center;
 }
 .address-list {
-    display: flex;
-    gap: 40px;
-    
+  display: flex;
+  gap: 40px;
 }
 
 .logo {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17 ;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    color: var(--IRIS, #4D5AE5);;
-    margin-right: 76px;
-   
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  color: var(--IRIS, #4d5ae5);
+  margin-right: 76px;
 }
 
 .accent {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17 ; 
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-    margin-right: 76px;
-   
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  margin-right: 76px;
 }
 .menu-link {
-    color: #2E2F42;
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-    display: block;
-
+  color: #2e2f42;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  padding: 24px 0;
+  display: block;
 }
- 
+
 .navigation-link:hover {
-    color: #404BBF;
+  color: #404bbf;
 }
 
 .navigation-link:focus {
-    color: #404bbf ;
+  color: #404bbf;
 }
 /* .address-link {
     color: #2e2f42;
@@ -136,248 +134,270 @@ img {
 } */
 
 .address-list {
-    display: flex;
-    flex-direction: row;
-    gap: 40px ;
-    font-style: normal;
-    padding: 24px 0;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  font-style: normal;
+  padding: 24px 0;
 }
 address {
-    display: block;
+  display: block;
 }
 .address-item {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    display: block;
-
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  display: block;
 }
 .address-item:hover {
-color: #404bbf;
+  color: #404bbf;
 }
 .address-item:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
-
 
 /* Section-title 1*/
 .hero-section {
-     background-color: #2E2F42;
-     flex-shrink: 0;
-     padding: 188px 0;
+  background-color: #2e2f42;
+  flex-shrink: 0;
+  padding: 188px 0;
+  background-image: url(../images/background-image.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/background-image.jpg);
 }
 
 .hero {
-   display: flex;
-   flex-direction: column; 
-   align-items: center;
-   padding-top: 188px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 188px;
 }
 
 .hero-title {
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 56px;
-    font-weight: 700;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    max-width: 496px;
-    margin-left: auto;
-    margin-right: auto;
- 
+  color: #ffffff;
+  text-align: center;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
- .button-title {
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    border: none;
-    cursor:pointer;
-    font-size: 16px;
-    color: #FFFFFF;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    background-color: #4d5ae5;
-    border-radius: 4px;
-    margin-top: 48px;
-    margin-left: auto;
-    margin-right: auto;
+.button-title {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  margin-top: 48px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .button-title:hover {
-    background-color: #404BBF;
+  background-color: #404bbf;
 }
 .button-title:focus {
-    background-color: #404BBF;
+  background-color: #404bbf;
 }
-
 
 /* Section-advantages 2 */
 
 .advantages-list {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 }
-    
-    
+
 .advantages-block {
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
-    gap: 24px;
-    list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  gap: 24px;
+  list-style: none;
 }
 .advantages-card {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 264px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 264px;
 }
 
 .advantages-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 /* Section-team  3*/
 .section-team {
-    background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 .applications-card {
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
-    background-color: #FFFFFF;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  background-color: #ffffff;
 }
 .team-title {
-    color: #2e2f42;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+  color: #2e2f42;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .applications-blok {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 .applications-inblok {
-    display: flex;
-    width: 232px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    padding: 32px 0;
+  display: flex;
+  width: 232px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 32px 0;
 }
 .applications-list {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
-
 
 .applications {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-align: center; 
-    /* margin-bottom: 8px; */
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+  /* margin-bottom: 8px; */
 }
 .applications-content {
-    letter-spacing: 0.02em;
-    color: #434455;
-    text-align: center;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-align: center;
+}
+
+.team-link-item {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+.icon-item {
+  display: block;
 }
 
 /* Section-portfolio 4 */
 .portfolio-title {
-    background-color: #FFF;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+  background-color: #fff;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .cards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .card-description {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    padding: 32px 16px ;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 32px 16px;
 
-    border-top: none;
-
+  border-top: none;
 }
 
 .portfolio-blok {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .card-set {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
-    width: calc((100% - 48px) / 3);
-    border: 1px solid var(--CORNFLOWER, #E7E9FC);
-
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  flex-shrink: 0;
+  width: calc((100% - 48px) / 3);
+  border: 1px solid var(--CORNFLOWER, #e7e9fc);
 }
 .subtitle {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 /* Footer */
 .basement {
-    background-color:  #2e2f42;
-    height: 312px;
-    flex-shrink: 0;
-    padding: 100px 0;
+  background-color: #2e2f42;
+  height: 312px;
+  flex-shrink: 0;
+  padding: 100px 0;
 }
 .logo-footer {
-    display: inline-block;
-    margin-bottom: 16px;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .description-footer {
-    max-width: 264px;
-    color: var(--CLOUD, #F4F4FD);
-    letter-spacing: 0.02em;
-    margin-top: 18px;
+  max-width: 264px;
+  color: var(--CLOUD, #f4f4fd);
+  letter-spacing: 0.02em;
+  margin-top: 18px;
 }
 .accent-two {
-    color: #F4F4FD;
-    padding-top: 156px;
+  color: #f4f4fd;
+  padding-top: 156px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.adv-box {
+  display: flex;
+  border-radius: 4px;
+  justify-content: center;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  flex-basis: 112px;
+  padding: 24px 100px;
+}
+/* .footer-link {
+  display: flex;
+  gap: 16px;
+  margin-top: 16px;
+} */
+.footer-link {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  font-style: normal;
+  padding: 24px 0;
+}
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px;
+  gap: 120px;
+}
