--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ img {
 /* Heder */
 .header-content {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -100,13 +102,6 @@ img {
 
 .accent {
   color: var(--NAVY-BLUE, #2e2f42);
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.54px;
-  text-transform: uppercase;
-  margin-right: 76px;
 }
 .menu-link {
   color: #2e2f42;
@@ -115,6 +110,10 @@ img {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: block;
+  position: relative;
+}
+.menu-link-accent {
+  color: #404bbf;
 }
 
 .navigation-link:hover {
@@ -164,7 +163,7 @@ address {
   padding: 188px 0;
   background-image: url(../images/background-image.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-size: cover;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -208,10 +207,9 @@ address {
   margin-top: 48px;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button-title:hover {
-  background-color: #404bbf;
-}
+.button-title:hover,
 .button-title:focus {
   background-color: #404bbf;
 }
@@ -246,6 +244,15 @@ address {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+.adv-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 /* Section-team  3*/
