--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,18 @@ img {
   padding: 24px 0;
   display: block;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.menu-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
 .menu-link-accent {
   color: #404bbf;
 }
@@ -148,6 +159,7 @@ address {
   letter-spacing: 0.02em;
   color: #434455;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-item:hover {
   color: #404bbf;
@@ -262,6 +274,8 @@ address {
 .applications-card {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   background-color: #ffffff;
 }
 .team-title {
@@ -273,6 +287,7 @@ address {
   text-transform: capitalize;
   margin-bottom: 72px;
 }
+
 .applications-blok {
   display: flex;
   justify-content: center;
@@ -284,7 +299,6 @@ address {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 8px;
   padding: 32px 0;
 }
 .applications-list {
@@ -307,13 +321,35 @@ address {
   text-align: center;
 }
 
+.our-team-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.our-team-link:hover {
+  background-color: #404bbf;
+}
+.our-team-link:focus {
+  background-color: #404bbf;
+}
+
 .team-link-item {
   display: flex;
   flex-direction: row;
   gap: 24px;
+  justify-content: center;
 }
 .icon-item {
-  display: block;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 40px;
+  height: 40px;
+}
+.icon-box {
+  fill: #f4f4fd;
 }
 
 /* Section-portfolio 4 */
@@ -333,6 +369,12 @@ address {
   column-gap: 24px;
   row-gap: 48px;
 }
+
+.cards:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .card-description {
   display: flex;
   flex-direction: column;
@@ -340,6 +382,8 @@ address {
   padding: 32px 16px;
 
   border-top: none;
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-blok {
@@ -354,7 +398,13 @@ address {
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.subtitle-content:hover {
+  transform: translateY(0%);
+}
+
 .subtitle {
   margin-bottom: 8px;
 }
@@ -405,6 +455,41 @@ address {
 .footer-container {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
   padding: 0 15px;
   gap: 120px;
+}
+.footer-logo {
+  margin-right: 120px;
+}
+.footer-social {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-social-link {
+  width: 40px;
+  height: 40px;
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link:hover {
+  background-color: #31d0aa;
+}
+.icon-link:focus {
+  background-color: #31d0aa;
+}
+.icon-into {
+  fill: #f4f4fd;
 }
