--- a/css/styles.css
+++ b/css/styles.css
@@ -383,11 +383,6 @@ address {
   padding: 32px 16px;
 
   border-top: none;
-  position: relative;
-  overflow: hidden;
-}
-.card-description:hover {
-  transform: translateY(0%);
 }
 
 .portfolio-blok {
@@ -403,6 +398,8 @@ address {
   width: calc((100% - 48px) / 3);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow: hidden;
 }
 
 .subtitle-content:hover {
@@ -413,8 +410,6 @@ address {
   margin-bottom: 8px;
 }
 .new-pr {
-  position: absolute;
-  top: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -423,8 +418,14 @@ address {
   background-color: #4d5ae5;
   height: 100%;
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.new-pr:hover {
+  transform: translateY(0%);
 }
 
 /* Footer */
