--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,7 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-team-link:hover {
   background-color: #404bbf;
@@ -345,10 +346,10 @@ address {
   justify-content: center;
 }
 .icon-item {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 40px;
   height: 40px;
 }
+
 .icon-box {
   fill: #f4f4fd;
 }
@@ -384,6 +385,10 @@ address {
 
   border-top: none;
 }
+.img-overfly {
+  position: relative;
+  overflow: hidden;
+}
 
 .portfolio-blok {
   display: flex;
@@ -397,19 +402,20 @@ address {
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   overflow: hidden;
 }
 
 .subtitle-content:hover {
   transform: translateY(0%);
+} */
 }
 
 .subtitle {
   margin-bottom: 8px;
 }
-.new-pr {
+.text-over {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -424,7 +430,7 @@ address {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.new-pr:hover {
+.img-overfly:hover {
   transform: translateY(0%);
 }
 
