--- a/css/styles.css
+++ b/css/styles.css
@@ -134,14 +134,7 @@ img {
 .navigation-link:focus {
   color: #404bbf;
 }
-/* .address-link {
-    color: #2e2f42;
-    font-size: 16px;
-    font-weight: 400;
-    letter-spacing: 0.32px;
-    font-style: normal;
 
-} */
 
 .address-list {
   display: flex;
@@ -174,7 +167,7 @@ address {
   background-color: #2e2f42;
   flex-shrink: 0;
   padding: 188px 0;
-  background-image: url(../images/background-image.jpg);
+  /* background-image: url(../images/background-image.jpg); */
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -182,8 +175,9 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/background-image.jpg);
+    url(../images/background-image.jpg); */
 }
+
 
 .hero {
   display: flex;
@@ -371,8 +365,11 @@ address {
   column-gap: 24px;
   row-gap: 48px;
 }
+.card-set {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.card-set:hover {
+.cards:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -415,6 +412,17 @@ address {
 .subtitle {
   margin-bottom: 8px;
 }
+
+
+  .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .text-over {
   font-size: 16px;
   line-height: 1.5;
@@ -427,10 +435,8 @@ address {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.img-overfly:hover {
+.img-overfly:hover .overlay {
   transform: translateY(0%);
 }
 
