--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ ul {
 }
 img {
   box-sizing: border-box;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .section {
@@ -113,18 +116,30 @@ img {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.menu-link:hover {
+  color: #404bbf;
+}
 .menu-link::after {
-  content: '';
+  /* content: '';
   position: absolute;
   left: 0;
   bottom: -1px;
   height: 4px;
   background-color: #404bbf;
-  border-radius: 2px;
+  border-radius: 2px; */
 }
 
-.menu-link-accent {
+.menu-link-accent::after {
   color: #404bbf;
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 48px;
+  height: 4px;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .navigation-link:hover {
@@ -134,7 +149,6 @@ img {
 .navigation-link:focus {
   color: #404bbf;
 }
-
 
 .address-list {
   display: flex;
@@ -167,6 +181,7 @@ address {
   background-color: #2e2f42;
   flex-shrink: 0;
   padding: 188px 0;
+  margin: 0 auto;
   /* background-image: url(../images/background-image.jpg); */
   background-repeat: no-repeat;
   background-position: center center;
@@ -175,9 +190,8 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/background-image.jpg); */
+    url(../images/background-image.jpg);
 }
-
 
 .hero {
   display: flex;
@@ -365,14 +379,6 @@ address {
   column-gap: 24px;
   row-gap: 48px;
 }
-.card-set {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.cards:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
 
 .card-description {
   display: flex;
@@ -392,6 +398,15 @@ address {
   flex-direction: column;
   justify-content: center;
 }
+
+.card-set:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.card-set:hover p {
+  transform: translateY(0%);
+}
+
 .card-set {
   flex-direction: column;
   align-items: flex-start;
@@ -399,22 +414,25 @@ address {
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
-  /* transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-  overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 32px 16px;
+
+  border-top: none;
+  /* position: relative;
+  overflow: hidden; */
 }
 
 .subtitle-content:hover {
   transform: translateY(0%);
-} */
 }
-
-.subtitle {
+*/ .subtitle {
   margin-bottom: 8px;
 }
 
-
-  .overlay {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -438,6 +456,7 @@ address {
 }
 .img-overfly:hover .overlay {
   transform: translateY(0%);
+  cursor: pointer;
 }
 
 /* Footer */
