--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,9 @@ ul {
 }
 img {
   box-sizing: border-box;
-  display: block;
+  /* display: block;
   max-width: 100%;
-  height: auto;
+  height: auto; */
 }
 
 .section {
@@ -116,6 +116,10 @@ img {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.menu-link-accent {
+  color: #404bbf;
+}
+
 .menu-link:hover {
   color: #404bbf;
 }
@@ -362,7 +366,8 @@ address {
   fill: #f4f4fd;
 }
 
-/* Section-portfolio 4 */
+/* ------------------------------------------------------------------------- */
+/* Section-portfolio 4 ---------------------------------------------------- */
 .portfolio-title {
   background-color: #fff;
   font-size: 36px;
@@ -379,34 +384,6 @@ address {
   column-gap: 24px;
   row-gap: 48px;
 }
-
-.card-description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 32px 16px;
-
-  border-top: none;
-}
-.img-overfly {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio-blok {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.card-set:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.card-set:hover p {
-  transform: translateY(0%);
-}
-
 .card-set {
   flex-direction: column;
   align-items: flex-start;
@@ -414,49 +391,45 @@ address {
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-content {
+  position: relative;
+  overflow: hidden;
+}
+.card-set:hover .card-overlay {
+  transform: translateY(0%);
+  cursor: pointer;
+}
+
+.card-overlay {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  padding: 40px 32px;
+  top: 0;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.content-overlay {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.card-description {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 32px 16px;
-
   border-top: none;
-  /* position: relative;
-  overflow: hidden; */
 }
 
-.subtitle-content:hover {
-  transform: translateY(0%);
-}
-*/ .subtitle {
+.subtitle {
   margin-bottom: 8px;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.text-over {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.img-overfly:hover .overlay {
-  transform: translateY(0%);
-  cursor: pointer;
 }
 
 /* Footer */
