--- a/css/styles.css
+++ b/css/styles.css
@@ -396,12 +396,22 @@ address {
   position: relative;
   overflow: hidden;
 }
-.card-set:hover .card-overlay {
+
+.card-set:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.card-set:hover .content-overlay {
   transform: translateY(0%);
   cursor: pointer;
 }
 
-.card-overlay {
+.content-overlay {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   position: absolute;
   display: flex;
   align-items: center;
@@ -412,12 +422,6 @@ address {
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.content-overlay {
-  color: #f4f4fd;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 
 .card-description {
