--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,7 @@ address {
 .card-content {
   position: relative;
   overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-set:hover {
@@ -421,7 +422,6 @@ address {
   height: 100%;
   width: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-description {
