--- a/css/styles.css
+++ b/css/styles.css
@@ -391,6 +391,7 @@ address {
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-content {
   position: relative;
@@ -422,6 +423,7 @@ address {
   height: 100%;
   width: 100%;
   transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-description {
