--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,9 @@ ul {
 }
 img {
   box-sizing: border-box;
-  /* display: block;
+  display: block;
   max-width: 100%;
-  height: auto; */
+  height: auto;
 }
 
 .section {
@@ -72,7 +72,6 @@ img {
   display: flex;
   flex-direction: row;
   padding: 0 15px;
-  gap: 60px;
 }
 .header-nav {
   display: flex;
@@ -85,7 +84,6 @@ img {
   flex-direction: row;
   flex-grow: 1;
   gap: 40px;
-  justify-content: center;
 }
 .address-list {
   display: flex;
@@ -285,6 +283,10 @@ address {
   background-color: #f4f4fd;
 }
 .applications-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -307,11 +309,6 @@ address {
   gap: 24px;
 }
 .applications-inblok {
-  display: flex;
-  width: 232px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 32px 0;
 }
 .applications-list {
@@ -332,6 +329,7 @@ address {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .our-team-link {
@@ -385,12 +383,7 @@ address {
   row-gap: 48px;
 }
 .card-set {
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-  flex-shrink: 0;
   width: calc((100% - 48px) / 3);
-  border: 1px solid var(--CORNFLOWER, #e7e9fc);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-content {
@@ -416,7 +409,6 @@ address {
   letter-spacing: 0.02em;
   position: absolute;
   display: flex;
-  align-items: center;
   padding: 40px 32px;
   top: 0;
   background-color: #4d5ae5;
@@ -427,77 +419,86 @@ address {
 }
 
 .card-description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   padding: 32px 16px;
-  border-top: none;
+  border: 1px solid var(--CORNFLOWER, #e7e9fc);
 }
 
 .subtitle {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
   margin-bottom: 8px;
 }
 
+.subtitle-content {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
 /* Footer */
+
 .basement {
   background-color: #2e2f42;
-  height: 312px;
-  flex-shrink: 0;
   padding: 100px 0;
 }
+.footer-container {
+  display: flex;
+  gap: 120px;
+  /* flex-direction: row;
+  padding: 0 15px; */
+}
+
+.one-block {
+  display: flex;
+  flex-direction: column;
+}
+
 .logo-footer {
-  display: inline-block;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   margin-bottom: 16px;
+  display: inline-block;
+  text-transform: uppercase;
+  color: var(--IRIS, #4d5ae5);
+}
+.accent-two {
+  color: #f4f4fd;
 }
 
 .description-footer {
   max-width: 264px;
   color: var(--CLOUD, #f4f4fd);
   letter-spacing: 0.02em;
-  margin-top: 18px;
+  /* margin-top: 18px; */
 }
-.accent-two {
-  color: #f4f4fd;
-  padding-top: 156px;
-}
-.adv-box {
+.icon-footer {
   display: flex;
-  border-radius: 4px;
-  justify-content: center;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  background: var(--CLOUD, #f4f4fd);
-  flex-basis: 112px;
-  padding: 24px 100px;
-}
-/* .footer-link {
-  display: flex;
+  flex-direction: column;
   gap: 16px;
-  margin-top: 16px;
-} */
+}
+
 .footer-link {
   display: flex;
   flex-direction: row;
   gap: 16px;
   font-style: normal;
-  padding: 24px 0;
+  /* padding: 24px 0; */
 }
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  padding: 0 15px;
-  gap: 120px;
-}
-.footer-logo {
-  margin-right: 120px;
-}
+
 .footer-social {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
-  margin-bottom: 16px;
 }
 .footer-social-link {
   width: 40px;
