--- a/css/styles.css
+++ b/css/styles.css
@@ -482,7 +482,6 @@ address {
 .icon-footer {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .footer-link {
@@ -498,6 +497,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-bottom: 16px;
 }
 .footer-social-link {
   width: 40px;
